Refactor Pebbles CSS framework and convert to Sass

--- a/bedrock/mozorg/templates/mozorg/about/leadership.html
+++ b/bedrock/mozorg/templates/mozorg/about/leadership.html
@@ -2,7 +2,7 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
-{% extends "base-new.html" %}
+{% extends "base-pebbles.html" %}
 
 {% block page_title %}{{ _('Mozilla Leadership') }}{% endblock %}
 {% block body_id %}about-leadership{% endblock %}
