--- a/bedrock/mozorg/templates/mozorg/home/home.html
+++ b/bedrock/mozorg/templates/mozorg/home/home.html
@@ -3,8 +3,7 @@
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
 {% from "macros.html" import google_play_button with context %}
-
-{% extends "base-new.html" %}
+{% extends "base-pebbles.html" %}
 
 {% add_lang_files "mozorg/home/index-2016" %}
 
@@ -49,7 +48,7 @@
     {{ download_firefox(alt_copy=_('Download Firefox'), dom_id='nav-download-firefox') }}
     <nav class="masthead-nav-main" id="nav-main">
       <span class="toggle" role="button" aria-controls="nav-main-menu" aria-expanded="false" tabindex="0">{{ _('Menu') }}</span>
-      <ul id="nav-main-menu">
+      <ul class="nav-main-menu" id="nav-main-menu">
         <li class="first about-item">
           <a href="{{ url('mozorg.about') }}" data-link-type="nav" data-link-name="About">{{ _('About') }}</a>
         </li>
@@ -206,69 +205,14 @@
   <aside class="section section-newsletter" id="newsletter-subscribe">
     <div class="content">
     {% if LANG.startswith('en-') %}
-      {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Love the Web?'), subtitle=_('Get the Mozilla newsletter and help us keep it open and free.'), button_class='light', spinner_color='#fff') }}
+      {{ email_newsletter_form(newsletters='mozilla-foundation', title=_('Love the Web?'), subtitle=_('Get the Mozilla newsletter and help us keep it open and free.'), button_class='hollow light', spinner_color='#fff') }}
     {% else %}
-      {{ email_newsletter_form(button_class='light', spinner_color='#fff') }}
+      {{ email_newsletter_form(button_class='hollow light', spinner_color='#fff') }}
     {% endif %}
     </div>
   </aside>
 
 </main>
-{% endblock %}
-
-{% block site_footer %}
-<footer class="wrapper section-footer" id="footer">
-  <nav class="content">
-    <div class="footer-column">
-      <h1 class="logo"><a href="{{ url('mozorg.home') }}" data-link-type="footer" data-link-name="Mozilla">Mozilla</a></h1>
-      <p class="license">
-        {%- trans url=url('foundation.licensing.website-content') -%}
-        Portions of this content are ©1998–{{ current_year }} by individual
-        mozilla.org contributors. Content available under
-        a <a href="{{ url }}">Creative Commons license</a>.
-        {%- endtrans -%}
-      </p>
-    </div>
-
-    <div class="footer-column">
-      <ul class="links-join">
-        <li><a href="{{ url('mozorg.contact.contact-landing') }}" data-link-type="footer" data-link-name="Contact Us">{{ _('Contact Us') }}</a></li>
-        <li class="wrap"><a href="{{ donate_url('footer') }}" class="donate" data-link-type="footer" data-link-name="Donate">{{ _('Donate') }}</a></li>
-        <li class="clear"><a href="https://wiki.mozilla.org/Webdev/GetInvolved/mozilla.org" data-link-type="footer" data-link-name="Contribute to this site">{{ _('Contribute to this site') }}</a></li>
-      </ul>
-
-      <ul class="links-legal">
-        <li><a href="{{ url('privacy') }}" data-link-type="footer" data-link-name="Privacy">{{ _('Privacy') }}</a></li>
-        <li class="wrap"><a href="{{ url('privacy.notices.websites') }}#cookies" data-link-type="footer" data-link-name="Cookies">{{ _('Cookies') }}</a></li>
-        <li class="wrap"><a href="{{ url('legal.index') }}" data-link-type="footer" data-link-name="Legal">{{ _('Legal') }}</a></li>
-        <li class="clear"><a href="{{ url('legal.fraud-report') }}" data-link-type="footer" data-link-name="Report Trademark Abuse">{{ _('Report Trademark Abuse') }}</a></li>
-      </ul>
-    </div>
-
-    <div class="footer-column">
-      <ul class="links-social">
-        <li>
-          {{ _('Mozilla:') }}
-          <ul>
-            <li><a href="https://twitter.com/mozilla" data-link-type="footer" data-link-name="Twitter (@mozilla)">{{ _('Twitter') }}<span> (@mozilla)</span></a></li>
-            <li><a href="https://www.facebook.com/mozilla" data-link-type="footer" data-link-name="Facebook (Mozilla)">{{ _('Facebook') }}<span> (Mozilla)</span></a></li>
-          </ul>
-        </li>
-        <li>
-          {{ _('Firefox:') }}
-          <ul>
-            <li><a href="{{ firefox_twitter_url() }}" data-link-type="footer" data-link-name="Twitter (@firefox)">{{ _('Twitter') }}<span> (@firefox)</span></a></li>
-            <li><a href="https://www.facebook.com/Firefox" data-link-type="footer" data-link-name="Facebook (Firefox)">{{ _('Facebook') }}<span> (Firefox)</span></a></li>
-            <li><a href="https://www.youtube.com/firefoxchannel" data-link-type="footer" data-link-name="YouTube (firefoxchannel)">{{ _('YouTube') }}<span> (firefoxchannel)</span></a></li>
-          </ul>
-        </li>
-      </ul>
-      <div class="lang-switcher">
-        {% include 'includes/lang_switcher.html' %}
-      </div>
-    </div>
-  </nav>
-</footer>
 {% endblock %}
 
 {% block js %}
