--- a/media/css/mozorg/home/home.scss
+++ b/media/css/mozorg/home/home.scss
@@ -2,48 +2,29 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import '../../pebbles/lib.less';
-@import '../../firefox/horizon-lib.less';
+@import '../../pebbles/components/buttons-download';
 
-@font-face {
-    font-family: 'Architects Daughter';
-    font-weight: normal;
-    font-style: normal;
-    src: url('/media/fonts/architectsdaughter.eot');
-    src: url('/media/fonts/architectsdaughter.eot?#iefix') format('embedded-opentype'),
-         url('/media/fonts/architectsdaughter.woff2') format('woff2'),
-         url('/media/fonts/architectsdaughter.woff') format('woff'),
-         url('/media/fonts/architectsdaughter.ttf') format('truetype');
-}
 
-@fontHeader: #2762A9;
-@fontDark: #56565A;
-@handwritten-font-family: 'Architects Daughter', X-LocaleSpecific, sans-serif;
-@color-mozred-bright: saturate(lighten(@color-mozred, 5%), 10%);
+$color-mozred-bright: saturate(lighten($color-mozred, 5%), 10%);
+$color-text-header: #2762A9;
+$color-text-dark: #56565A;
 
-.invert-text() {
-    color: #fff;
+// download page and firstrun colors
+$horizonColorForeground: #2d253a;
+$horizonColorBackground: #092d6c;
 
-    a:link,
-    a:visited,
-    a:hover,
-    a:active,
-    a:focus {
-        color: #fff;
-    }
-
-    a:hover,
-    a:active,
-    a:focus {
-        text-decoration: underline;
-    }
+// static horizon background gradient
+@mixin horizon-gradient() {
+    background-color: $horizonColorBackground;
+    background-image: linear-gradient(-180deg, #092d6c 0%, #10659c 40%, #7babbf 68%, #e9c39f 85%, #ff9a4a 100%);
+    background-repeat: no-repeat;
 }
 
 // mixin for icon links in who/innovate sections
-.icon-link(@height, @bgOffset) {
+@mixin icon-link($height, $bgOffset) {
     &:before {
-        background-position: 0 @bgOffset;
-        height: @height;
+        background-position: 0 $bgOffset;
+        height: $height;
         top: 0;
     }
 }
@@ -54,15 +35,15 @@ body {
 
 // Header
 .masthead {
-    .invert-text;
-    background: @color-mozred;
+    background: $color-mozred-bright;
+    color: #fff;
 
     .content {
         padding: 51px 20px 0;
     }
 
     .masthead-logo {
-        background: @color-mozred-bright;
+        background: $color-mozred-bright;
         height: 30px;
         left: 0;
         margin: 0;
@@ -78,91 +59,13 @@ body {
     }
 }
 
-// Global main nav
-.masthead-nav-main {
-    .fira-sans-light;
-    left: 0;
-    position: absolute;
-    top: 0;
-    z-index: 99;
-
-    .toggle {
-        background: @color-mozred url('/media/img/home/2016/icon-menu.svg') center center no-repeat;
-        .background-size(22px auto);
-        cursor: pointer;
-        display: block;
-        height: 51px;
-        overflow: hidden;
-        position: relative;
-        text-indent: -999em;
-        width: 51px;
-    }
-
-    a {
-        text-decoration: none;
-
-        &:hover,
-        &:focus {
-            text-decoration: underline;
-        }
-    }
-}
-
-#nav-main-menu {
-    background: #fff;
-    box-shadow: 2px 2px 0 rgba(0, 0, 0, .2);
-    left: -300px;
-    overflow: visible;
-    position: absolute;
-    top: 50px;
-    width: 200px;
-    z-index: 99;
-
-    li {
-        border-bottom: 1px solid #ccc;
-        white-space: nowrap;
-
-        &:last-child {
-            border: 0;
-        }
-    }
-
-    a {
-        background: #fff;
-        color: @color-text-primary;
-        display: block;
-        padding: 10px 20px;
-        text-decoration: none;
-        -webkit-transition: background-color 150ms ease, border-width 150ms ease, color 150ms ease, padding 150ms ease;
-                transition: background-color 150ms ease, border-width 150ms ease, color 150ms ease, padding 150ms ease;
-
-        &:hover,
-        &:focus {
-            background-color: #f5f5f5;
-            border-right: 6px solid @color-mozred;
-            color: @color-mozred;
-            text-decoration: underline;
-        }
-    }
-}
-
-.masthead-nav-main:hover #nav-main-menu,
-.masthead-nav-main .toggle:focus + #nav-main-menu {
-    left: auto;
-}
-
-.js #nav-main-menu {
-    left: auto;
-    display: none;
-}
-
 #nav-download-firefox {
     display: none;
 }
 
-@media @mq-tablet {
+@media #{$mq-tablet} {
     .masthead {
-        background: @color-mozred-bright;
+        background: $color-mozred-bright;
         padding: 0;
 
         .content {
@@ -176,34 +79,12 @@ body {
         }
     }
 
-    .masthead-nav-main {
-        float: right;
-        position: relative;
-
-        .toggle {
-            display: none;
-        }
-    }
-
     #nav-main-menu,
     .js #nav-main-menu {
-        .clearfix;
-        .font-size(14px);
-        background: transparent;
-        box-shadow: none;
-        display: block;
-        margin: 0 0 0 20px;
         padding: 15px 0;
-        position: static;
-        width: 340px;
 
         li {
-            .border-box;
-            border: 0;
             border-right: 1px solid #fff;
-            float: left;
-            padding: 0 10px;
-            text-align: center;
 
             &:last-child {
                 border-right: 0;
@@ -214,11 +95,7 @@ body {
         a,
         a:hover,
         a:focus {
-            background: transparent;
-            border: 0;
             color: #fff;
-            padding: 0;
-            text-transform: uppercase;
         }
     }
 
@@ -231,7 +108,7 @@ body {
         }
 
         .button {
-            .font-size(14px);
+            @include font-size(14px);
             border-radius: 0;
             padding: 13px 20px;
             text-decoration: none;
@@ -244,12 +121,9 @@ body {
     }
 }
 
-@media @mq-desktop {
+@media #{$mq-desktop} {
     #nav-main-menu,
     .js #nav-main-menu {
-        margin-right: 20px;
-        width: 380px;
-
         li {
             padding: 0 20px;
         }
@@ -258,13 +132,11 @@ body {
 
 // flexbox layout for savvy browsers to push nav items to the right
 @supports (display: flex) {
-    @media @mq-tablet {
+    @media #{$mq-tablet} {
         #nav-main-menu,
         .js #nav-main-menu {
-            .flexbox;
-            .justify-content(flex-end);
-            margin-left: 0;
-            margin-right: 20px;
+            @include flexbox;
+            @include justify-content(flex-end);
         }
     }
 }
@@ -282,9 +154,8 @@ main {
 
     h2,
     h3 {
-        .border-box;
-        .fira-sans;
-        color: white;
+        @include border-box;
+        color: #fff;
         margin: 0 auto;
         text-align: center;
         text-shadow: 0 0 10px rgba(0, 0, 0, .01),
@@ -303,49 +174,49 @@ main {
     }
 
     h2 {
-        .font-size(32px);
+        @include font-size(32px);
         font-style: italic;
         line-height: 1.3;
         padding: 70px 40px;
-        max-width: @width-desktop;
+        max-width: $width-desktop;
 
-        @media @mq-tablet {
-            .font-size(48px);
+        @media #{$mq-tablet} {
+            @include font-size(48px);
         }
 
-        @media @mq-tablet and (min-height: 600px) {
+        @media #{$mq-tablet} and #{$mq-tall} {
             padding: 110px 40px;
         }
 
-        @media @mq-desktop and (min-height: 600px) {
+        @media #{$mq-desktop} and #{$mq-tall} {
             padding: 130px 40px;
         }
 
-        @media @mq-desktop-wide {
-            .font-size(56px);
+        @media #{$mq-desktop-wide} {
+            @include font-size(56px);
         }
 
-        @media @mq-desktop-wide and (min-height: 600px) {
+        @media #{$mq-desktop-wide} and #{$mq-tall} {
             padding: 150px 40px;
         }
     }
 
     h3 {
-        .font-size(20px);
+        @include font-size(20px);
         line-height: 1.3;
         padding: 0 40px 10px;
-        max-width: @width-tablet;
+        max-width: $width-tablet;
 
-        @media @mq-tablet {
-            .font-size(22px);
+        @media #{$mq-tablet} {
+            @include font-size(22px);
         }
 
-        @media @mq-desktop {
-            .font-size(26px);
+        @media #{$mq-desktop} {
+            @include font-size(26px);
         }
 
-        @media @mq-desktop-wide {
-            .font-size(28px);
+        @media #{$mq-desktop-wide} {
+            @include font-size(28px);
             padding-bottom: 20px;
         }
     }
@@ -361,7 +232,7 @@ main {
     }
 
     .slide {
-        .background-size(cover);
+        @include background-size(cover);
         background-position: center center;
         background-repeat: no-repeat;
         display: none;
@@ -374,7 +245,7 @@ main {
         background-image: url('/media/img/home/2016/intro/intro-learning-600.jpg');
     }
 
-    @media @mq-tablet {
+    @media #{$mq-tablet} {
         .slide {
             display: block;
         }
@@ -396,7 +267,7 @@ main {
         }
     }
 
-    @media @mq-desktop-wide {
+    @media #{$mq-desktop-wide} {
         #slide-one {
             background-image: url('/media/img/home/2016/intro/intro-mitchell-2000.jpg');
         }
@@ -415,18 +286,18 @@ main {
     }
 }
 
-@media @mq-desktop {
+@media #{$mq-desktop} {
     [lang^='en'] {
         #intro h2 {
-            .font-size(56px);
+            @include font-size(56px);
         }
     }
 }
 
-@media @mq-desktop-wide {
+@media #{$mq-desktop-wide} {
     [lang^='en'] {
         #intro h2 {
-            .font-size(64px);
+            @include font-size(64px);
         }
     }
 }
@@ -441,7 +312,7 @@ main {
         margin-bottom: 10px;
     }
 
-    @media @mq-tablet {
+    @media #{$mq-tablet} {
         margin-left: auto;
         margin-right: auto;
         text-align: left;
@@ -454,7 +325,7 @@ main {
             position: relative;
 
             a {
-                .font-size(18px);
+                @include font-size(18px);
 
                 &:before {
                     background: url('/media/img/home/2016/svg-sprite.svg');
@@ -469,40 +340,40 @@ main {
         }
     }
 
-    @media @mq-desktop {
+    @media #{$mq-desktop} {
         li a {
-            .font-size(20px);
+            @include font-size(20px);
         }
     }
 }
 
 // set icons for each link
 #encryption a {
-    .icon-link(43px, 0);
+    @include icon-link(43px, 0);
 }
 
 #teachtheweb a {
-    .icon-link(32px, -43px);
+    @include icon-link(32px, -43px);
 }
 
 #leandata a {
-    .icon-link(34px, -75px);
+    @include icon-link(34px, -75px);
 }
 
 #gaming a {
-    .icon-link(34px, -109px);
+    @include icon-link(34px, -109px);
 }
 
 #vr a {
-    .icon-link(23px, -143px);
+    @include icon-link(23px, -143px);
 }
 
 #servo a {
-    .icon-link(30px, -166px);
+    @include icon-link(30px, -166px);
 }
 
 #rust a {
-    .icon-link(33px, -196px);
+    @include icon-link(33px, -196px);
 }
 
 .section-content {
@@ -521,15 +392,15 @@ main {
         padding-bottom: 20px;
     }
 
-    @media @mq-tablet {
+    @media #{$mq-tablet} {
         p {
-            .font-size(18px);
+            @include font-size(18px);
         }
     }
 
-    @media @mq-desktop {
+    @media #{$mq-desktop} {
         p {
-            .font-size(20px);
+            @include font-size(20px);
         }
     }
 }
@@ -540,14 +411,14 @@ main {
 
 #who .section-content {
     background: #fff;
-    color: @fontDark;
+    color: $color-text-dark;
 
     .section-headline {
         color: #d93a33;
     }
 
     &:before {
-        .at2x('/media/img/home/2016/speaker.png', 200px, 200px);
+        @include at2x('/media/img/home/2016/speaker.png', 200px, 200px);
         background-position: center;
     }
 
@@ -561,7 +432,7 @@ main {
     color: #fff;
 
     &:before {
-        .at2x('/media/img/home/2016/vr.png', 200px, 200px);
+        @include at2x('/media/img/home/2016/vr.png', 200px, 200px);
         background-position: center;
     }
 
@@ -571,9 +442,9 @@ main {
 }
 
 // float layout for wider viewports
-@media @mq-tablet {
+@media #{$mq-tablet} {
     #who-innovate-wrapper {
-        .clearfix;
+        @include clearfix;
     }
 
     #who {
@@ -587,7 +458,6 @@ main {
     }
 }
 
-// ** ---------------------- **//
 
 // ** FIREFOX ** //
 #firefox {
@@ -596,12 +466,12 @@ main {
     text-align: center;
 
     h2 {
-        .font-size(24px);
+        @include font-size(24px);
         padding-top: 40px;
 
         &:before {
-            .at2x('/media/img/firefox/common/firefox-logo.png');
-            .background-size(100%);
+            @include at2x('/media/img/firefox/common/firefox-logo.png');
+            @include background-size(100%);
             background-repeat: no-repeat;
             content: '';
             display: block;
@@ -610,8 +480,8 @@ main {
             width: 80px;
         }
 
-        @media @mq-phone-wide {
-            .font-size(36px);
+        @media #{$mq-phone-wide} {
+            @include font-size(36px);
 
             &:before {
                 height: 142px;
@@ -619,15 +489,15 @@ main {
             }
         }
 
-        @media @mq-highres {
+        @media #{$mq-high-res} {
             &:before {
-                .background-size(100%);
+                @include background-size(100%);
             }
         }
     }
 
     .horizon {
-        .horizon-gradient;
+        @include horizon-gradient;
 
         .content {
             padding-bottom: 270px;
@@ -650,8 +520,8 @@ main {
             color: #fff;
         }
 
-        @media @mq-tablet {
-            .font-size(24px);
+        @media #{$mq-tablet} {
+            @include font-size(24px);
         }
     }
 
@@ -676,7 +546,7 @@ main {
             width: 1770px;
         }
 
-        @media @mq-tablet {
+        @media #{$mq-tablet} {
             // re-center assets
             margin-left: -885px;
         }
@@ -697,7 +567,7 @@ main {
     }
 
     .foreground-shape {
-        .at2x('/media/img/firefox/horizon/foreground.png', 1770px, 254px);
+        @include at2x('/media/img/firefox/horizon/foreground.png', 1770px, 254px);
         background-position: top left;
         background-repeat: no-repeat;
         bottom: 0;
@@ -750,13 +620,13 @@ main {
     ul {
         position: relative;
         padding: 60px 0 40px;
-        .clearfix;
+        @include clearfix;
 
         li {
-            max-width: @width-phone-wide;
+            max-width: $width-phone-wide;
             margin: 0 auto 30px;
 
-            @media @mq-tablet {
+            @media #{$mq-tablet} {
                 float: left;
                 width: 33.3%;
                 margin: 0;
@@ -765,13 +635,13 @@ main {
     }
 
     h3 {
-        .font-size(18px);
-        color: @color-text-secondary;
+        @include font-size(18px);
+        color: $color-text-secondary;
         padding-top: 100px;
         position: relative;
 
         &:before {
-            .background-size(fill);
+            @include background-size(fill);
             background-position: center center;
             background-repeat: no-repeat;
             content: '';
@@ -782,8 +652,8 @@ main {
             width: 100%;
         }
 
-        @media @mq-tablet {
-            .font-size(20px);
+        @media #{$mq-tablet} {
+            @include font-size(20px);
         }
     }
 
@@ -815,8 +685,8 @@ main {
     }
 
     p {
-        .font-size(16px);
-        color: @color-text-secondary;
+        @include font-size(16px);
+        color: $color-text-secondary;
     }
 }
 
@@ -824,18 +694,18 @@ main {
 // Newsletter
 #newsletter-subscribe.section-newsletter {
     margin: 0;
-    background: @color-mozred-bright;
+    background: $color-mozred-bright;
 
     .newsletter-form,
     .form-title,
     .form-contents {
-        .clearfix;
+        @include clearfix;
         float: none;
         margin: 0 auto;
     }
 
     .form-title {
-        .background-size(100px, 100px);
+        @include background-size(100px, 100px);
         background-position: center top;
         margin-top: 0;
         min-height: 0;
@@ -844,13 +714,13 @@ main {
         text-align: center;
 
         h3 {
-            .font-size(32px);
+            @include font-size(32px);
             font-style: italic;
             text-align: center;
         }
 
         h4 {
-            .font-size(18px);
+            @include font-size(18px);
             font-weight: normal;
             line-height: 1.5;
         }
@@ -872,18 +742,18 @@ main {
 }
 
 .js #form-details {
-    .hidden;
+    @include hidden;
 }
 
-@media @mq-tablet {
+@media #{$mq-tablet} {
     #newsletter-subscribe.section-newsletter {
         .newsletter-form {
             padding-left: 380px;
             width: 310px;
 
             .form-title {
-                .background-size(120px 120px);
-                .border-box;
+                @include background-size(120px 120px);
+                @include border-box;
                 background-position: left top;
                 float: left;
                 margin-left: -380px;
@@ -898,7 +768,7 @@ main {
 
             .form-contents,
             .form-submit {
-                .border-box;
+                @include border-box;
                 float: left;
                 margin: 0;
                 width: 100%;
@@ -907,12 +777,10 @@ main {
     }
 }
 
-.section-footer {
-    .fira-sans-light;
-    .font-size(14px);
-    .invert-text;
+#colophon {
     background: #666;
-    padding: 20px 0;
+    color: #fff;
+    margin: 0;
 
     a,
     a:link {
@@ -931,87 +799,7 @@ main {
     }
 
     .logo a {
-        .at2x('/media/img/sandstone/footer-mozilla-white.png', 93px, 24px);
-        .image-replaced();
-        display: inline-block;
-        height: 24px;
-        width: 93px;
-    }
-
-    p,
-    ul {
-        margin-bottom: 15px;
-        line-height: 1.5;
-    }
-
-    ul {
-        overflow: hidden;
-
-        &.fx-footer-links li {
-            float: none;
-        }
-
-        li {
-            float: left;
-
-            &.wrap:before {
-                content: '\00A0\00B7\00A0'; /* &nbsp;&middot;&nbsp; */
-            }
-
-            &.clear {
-                clear: both;
-            }
-        }
-    }
-
-    .links-social li {
-        float: none;
-
-        ul {
-            display: inline;
-            margin: 0;
-        }
-
-        li {
-            display: inline;
-
-            &:before {
-                content: "\00B7\00A0"; /* &middot;&nbsp; */
-            }
-
-            &:first-child:before {
-                content: "";
-            }
-
-            span {
-                .visually-hidden(); /* for a11y */
-            }
-        }
-    }
-
-    @media @mq-tablet and (min-height: 600px) {
-        .content {
-            .clearfix;
-            margin: 0 auto;
-            padding-left: 30px;
-            padding-right: 30px;
-        }
-    }
-
-    @media @mq-desktop and (min-height: 600px) {
-        .footer-column {
-            // mimics .span mixin, but must be activated at @mq-desktop
-            // instead of @mq-tablet
-            .border-box;
-            float: left;
-            padding: 0 (@gutter-width / 2);
-            width: @column-width * 4;
-        }
-    }
-
-    @media @mq-desktop-wide {
-        .content {
-            width: @width-desktop;
-        }
+        @include at2x('/media/img/sandstone/footer-mozilla-white.png', 93px, 24px);
     }
 }
+
