--- a/media/css/pebbles/components/_footer.scss
+++ b/media/css/pebbles/components/_footer.scss
@@ -2,12 +2,14 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import (reference) '../lib.less';
+@import '../includes/lib';
+
 
 #colophon {
-    .font-size(14px);
+    @include fira-sans-light;
+    @include font-size(14px);
     background: #fff;
-    color: @color-text-tertiary;
+    color: $color-text-tertiary;
     line-height: 1.5;
     margin: 1em 0 0;
     padding: 40px 0;
@@ -24,12 +26,12 @@
     }
 
     .logo {
-        .font-size(1rem);
-        margin-bottom: 1em;
+        @include font-size(16px);
+        margin-bottom: .5em;
 
         a {
-            .at2x('/media/img/sandstone/footer-mozilla.png', 93px, 24px);
-            .image-replaced();
+            @include at2x('/media/img/sandstone/footer-mozilla.png', 93px, 24px);
+            @include image-replaced;
             display: inline-block;
             height: 24px;
             width: 93px;
@@ -42,24 +44,23 @@
     }
 
     .row {
-        .clearfix;
+        @include border-box;
+        @include clearfix;
         margin: 0 auto;
-        width: @width-phone;
+        padding: 0 20px;
+        min-width: $width-phone;
 
-        @media @mq-phone-wide {
-            width: @width-phone-wide;
+        @media #{$mq-tablet} {
+            padding: 0 10px;
+            width: $width-tablet;
         }
 
-        @media @mq-tablet {
-            width: @width-tablet;
+        @media #{$mq-desktop} {
+            width: $width-desktop;
         }
 
-        @media @mq-desktop {
-            width: @width-desktop;
-        }
-
-        @media @mq-desktop-wide {
-            width: @width-desktop-wide;
+        @media #{$mq-desktop-wide} {
+            width: $width-desktop-wide;
         }
     }
 
@@ -67,9 +68,9 @@
         margin-bottom: 20px;
     }
 
-    @media @mq-tablet {
+    @media #{$mq-tablet} {
         .col {
-            .span(4);
+            @include span(4);
             margin-bottom: 0;
         }
     }
@@ -112,6 +113,10 @@
             &:first-child:before {
                 content: '';
             }
+
+            span {
+                @include visually-hidden;
+            }
         }
     }
 
@@ -120,7 +125,7 @@
     }
 }
 
-@media @mq-tablet {
+@media #{$mq-tablet} {
     [dir='rtl'] #colophon {
         .col,
         .col-2 ul li {
