--- a/media/css/mozorg/home/home-b.less
+++ b/media/css/mozorg/home/home-b.less
@@ -2,9 +2,11 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import '../../pebbles/lib.less';
-@import 'prototypes/lib';
-@import "../../firefox/horizon-lib.less";
+@import (reference) '../../pebbles/includes/lib.less';
+@import (reference) 'prototypes/lib.less';
+@import (reference) '../../firefox/horizon-lib.less';
+
+@import '../../sandstone/buttons.less';
 
 @font-face {
     font-family: 'Architects Daughter';
