--- a/bedrock/mozorg/templates/mozorg/home/home-b.html
+++ b/bedrock/mozorg/templates/mozorg/home/home-b.html
@@ -3,8 +3,7 @@
  # file, You can obtain one at http://mozilla.org/MPL/2.0/. -#}
 
 {% from "macros.html" import google_play_button with context %}
-
-{% extends "base-new.html" %}
+{% extends "base-pebbles.html" %}
 
 {% add_lang_files "mozorg/home/index" %}
 
