--- a/media/css/newsletter/newsletter-mozilla.less
+++ b/media/css/newsletter/newsletter-mozilla.less
@@ -2,9 +2,10 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-@import (reference) '../pebbles/lib.less';
+@import (reference) '../pebbles/includes/lib.less';
+
 @import '../pebbles/components/footer.less';
-@import '../pebbles/elements/forms.less';
+@import '../sandstone/buttons.less';
 
 .content {
     .clearfix;
