--- a/media/css/pebbles/includes/fonts/fira-sans.less
+++ b/media/css/pebbles/includes/fonts/fira-sans.less
@@ -2,73 +2,77 @@
 // License, v. 2.0. If a copy of the MPL was not distributed with this
 // file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
+
 @font-face {
     font-family: 'Fira Sans';
+    font-weight: normal;
+    font-style: normal;
     src: url('/media/fonts/FiraSans-Regular.woff2') format('woff2'),
          url('/media/fonts/FiraSans-Regular.woff') format('woff'),
          url('/media/fonts/FiraSans-Regular.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
 }
 
 @font-face {
     font-family: 'Fira Sans';
+    font-weight: bold;
+    font-style: normal;
     src: url('/media/fonts/FiraSans-Bold.woff2') format('woff2'),
          url('/media/fonts/FiraSans-Bold.woff') format('woff'),
          url('/media/fonts/FiraSans-Bold.ttf') format('truetype');
-    font-weight: bold;
-    font-style: normal;
 }
 
 @font-face {
     font-family: 'Fira Sans';
+    font-weight: normal;
+    font-style: italic;
     src: url('/media/fonts/FiraSans-Italic.woff2') format('woff2'),
          url('/media/fonts/FiraSans-Italic.woff') format('woff'),
          url('/media/fonts/FiraSans-Italic.ttf') format('truetype');
-    font-weight: normal;
-    font-style: italic;
 }
 
 @font-face {
     font-family: 'Fira Sans';
+    font-weight: bold;
+    font-style: italic;
     src: url('/media/fonts/FiraSans-BoldItalic.woff2') format('woff2'),
          url('/media/fonts/FiraSans-BoldItalic.woff') format('woff'),
          url('/media/fonts/FiraSans-BoldItalic.ttf') format('truetype');
-    font-weight: bold;
-    font-style: italic;
 }
 
 @font-face {
     font-family: 'Fira Sans Light';
+    font-weight: normal;
+    font-style: normal;
     src: url('/media/fonts/FiraSans-Light.woff2') format('woff2'),
          url('/media/fonts/FiraSans-Light.woff') format('woff'),
          url('/media/fonts/FiraSans-Light.ttf') format('truetype');
-    font-weight: normal;
-    font-style: normal;
 }
 
 @font-face {
     font-family: 'Fira Sans Light';
+    font-weight: normal;
+    font-style: italic;
     src: url('/media/fonts/FiraSans-LightItalic.woff2') format('woff2'),
          url('/media/fonts/FiraSans-LightItalic.woff') format('woff'),
          url('/media/fonts/FiraSans-LightItalic.ttf') format('truetype');
+}
+
+// Light Bold is Regular
+@font-face {
+    font-family: 'Fira Sans Light';
+    font-weight: bold;
+    font-style: normal;
+    src: url('/media/fonts/FiraSans-Regular.woff2') format('woff2'),
+         url('/media/fonts/FiraSans-Regular.woff') format('woff'),
+         url('/media/fonts/FiraSans-Regular.ttf') format('truetype');
+}
+
+// Light Bold Italic is Regular Italic
+@font-face {
+    font-family: 'Fira Sans Light';
     font-weight: bold;
     font-style: italic;
-}
-
-@baseFiraFontFamily: 'Fira Sans', X-LocaleSpecific, sans-serif;
-
-.fira-sans() {
-    font-family: @baseFiraFontFamily;
-}
-
-.fira-sans-light() {
-    font-family: 'Fira Sans Light', X-LocaleSpecific-Light, @baseFiraFontFamily;
-    font-weight: normal;
-}
-
-.fira-sans-light-italic() {
-    font-family: 'Fira Sans Light', X-LocaleSpecific-Light, @baseFiraFontFamily;
-    font-weight: normal;
-    font-style: italic;
+    src: url('/media/fonts/FiraSans-Italic.woff2') format('woff2'),
+         url('/media/fonts/FiraSans-Italic.woff') format('woff'),
+         url('/media/fonts/FiraSans-Italic.ttf') format('truetype');
 }
