--- a/media/css/pebbles/includes/lib.less
+++ b/media/css/pebbles/includes/lib.less
@@ -6,46 +6,18 @@
 // THIS FILE SHOULD OUTPUT NOTHING!
 //
 // As this file is included in many places (for variable/mixin access),
-// it must output nothing for performance reasons.
+// it should compile to blank to avoid needless repetition.
+// Use '@import (reference)' to be extra sure.
 //
 // IF IT'S NOT A MIXIN OR VARIABLE, IT DOESN'T GO HERE!
 
 
-// Fonts
-
 // The custom X-LocaleSpecific font family is defined with a @font-face rule in
 // locale-specific stylesheets which can be found at /media/css/l10n/. See
 // /docs/l10n.rst for details.
-@base-font-family: 'Fira Sans', X-LocaleSpecific, sans-serif;
+@base-font-stack: @font-fira-sans;
 @base-font-size: 100%;
-
-// Use rem (root em) units for font-size.
-// Assumes default 16px to match sizes but will respect user preferences.
-// Pass through any units that aren't px or rem
-.font-size(@value) {
-        font-size: @value;
-}
-
-// When unit is pixels, pass it through and convert to rem
-.font-size(@value) when (ispixel(@value)) {
-        font-size: @value;
-        .font-size(unit(@value / 16, rem));
-}
-
-// When unit is rem, convert it to pixels and pass it through
-.font-size(@value) when (isunit(@value, rem)) {
-        font-size: unit(@value * 16, px);
-        font-size: @value;
-}
-
-.fira-sans() {
-        font-family: @base-font-family;
-}
-
-.fira-sans-light() {
-        font-family: 'Fira Sans Light', X-LocaleSpecific-Light, @base-font-family;
-        font-weight: normal;
-}
+@base-line-height: 1.5;
 
 
 // Text colors
@@ -60,6 +32,7 @@
 
 // Link colors
 @color-link: #0096dd; // blue (normal links)
+
 
 // Media queries
 @mq-desktop-wide:   ~'screen and (min-width: 1400px)';
@@ -98,6 +71,7 @@
 }
 
 
+// Clear floats
 .clearfix() {
     zoom: 1;
     &:after {
@@ -107,6 +81,100 @@
         height: 0;
         visibility: hidden;
     }
+}
+
+// Font families
+
+// Fira Sans
+@font-fira-sans: 'Fira Sans', X-LocaleSpecific, sans-serif;
+
+.fira-sans() {
+    font-family: @font-fira-sans;
+}
+
+.fira-sans-light() {
+    font-family: 'Fira Sans Light', X-LocaleSpecific-Light, @font-fira-sans;
+    font-weight: normal;
+}
+
+// Open Sans
+@font-open-sans: 'Open Sans', X-LocaleSpecific, sans-serif;
+
+.open-sans() {
+    font-family: @font-open-sans;
+}
+
+.open-sans-light() {
+    font-family: 'Open Sans Light', X-LocaleSpecific-Light, @font-open-sans;
+    font-weight: normal;
+}
+
+// Use rem (root em) units for font-size.
+// Assumes default 16px to match sizes but will respect user preferences.
+// Pass through any units that aren't px or rem
+.font-size(@value) {
+    font-size: @value;
+}
+
+// When unit is pixels, pass it through and convert to rem
+.font-size(@value) when (ispixel(@value)) {
+    font-size: @value;
+    .font-size(unit(@value / 16, rem));
+}
+
+// When unit is rem, convert it to pixels and pass it through
+.font-size(@value) when (isunit(@value, rem)) {
+    font-size: unit(@value * 16, px);
+    font-size: @value;
+}
+
+
+// Type scale based on a 1.333 ratio (Perfect Fourth)
+// See http://www.modularscale.com/?1&em&1.333&web&text
+// These are mixins, not classes. Keep your presentation out of your markup.
+
+.font-size-huge() { // For arbitrarily huge text
+    .font-size(3.157rem);
+
+    @media @mq-tablet {
+        .font-size(5.61rem);
+    }
+}
+
+.font-size-h1() {
+    .font-size(2.369rem);
+
+    @media @mq-tablet {
+        .font-size(3.157rem);
+    }
+}
+
+.font-size-h2() {
+    .font-size(1.777rem);
+
+    @media @mq-tablet {
+        .font-size(2.369rem);
+    }
+}
+
+.font-size-h3() {
+    .font-size(1.333rem);
+
+    @media @mq-tablet {
+        .font-size(1.777rem);
+    }
+}
+
+.font-size-h4() {
+    .font-size(1rem);
+
+    @media @mq-tablet {
+        .font-size(1.333rem);
+    }
+}
+
+.font-size-small() { // for arbitrarily small text
+    .font-size(.75rem);
 }
 
 
@@ -243,12 +311,8 @@
 }
 
 
-
-/****************************************************************************/
-// Classes used to hide content from users. Choose wisely!
-
-// Hide visually, but not to screen readers
-.visually-hidden() {
+// Hide an element visually, but not from screen readers
+.a11y-hidden() {
     border: 0;
     clip: rect(0 0 0 0);
     height: 1px;
@@ -259,12 +323,15 @@
     width: 1px;
 }
 
-// Hide visually & from screen readers
+.visually-hidden() {
+    .a11y-hidden;
+}
+
+// Hide an element completely, including from screen readers
 .hidden() {
     display: none;
 }
 
-/****************************************************************************/
 
 // not the most up to date method, but works in IE7
 .image-replaced() {
@@ -273,28 +340,33 @@
     white-space: nowrap;
 }
 
-// Flip an element horizontally for RTL locales such as Arabic. Usually applied
-// to :before or :after pseudo-elements with a background-image
+
+// Flip an element horizontally for RTL locales such as Arabic and Hebrew.
+// Usually applied to pseudo-elements with a background-image, not for text.
 .flip-horizontally() {
     .transform(scale(-1, 1));
 }
 
+
+// Adds a right-pointing arrow after
 .trailing-arrow() {
     &:after {
-        content: "\00A0\25B8"; /* nbsp triangle */
+        content: "\00A0\25B8"; // space+triangle
         white-space: nowrap;
     }
 }
 
+// Adds a left-pointing arrow before
 .leading-arrow() {
     &:before {
-        content: "\25B8\00A0"; /* triangle nbsp */
+        content: "\25B8\00A0"; // triangle+space
         white-space: nowrap;
         .transform(rotate, 180deg);
     }
 }
 
 
+// Columns
 .multi-column(@width: auto, @count: auto, @gap: normal) {
     -webkit-column-width: @width;
        -moz-column-width: @width;
@@ -322,6 +394,7 @@
             column-break-inside: avoid;
 }
 
+
 // A helper mixin for applying high-resolution background images (http://www.retinajs.com)
 // File-names should follow:
 //  example.png
@@ -332,19 +405,23 @@
 
     @media @mq-highres {
         background-image: url("@{at2x_path}");
-        -webkit-background-size: @w @h;
-                background-size: @w @h;
+        .background-size(@w @h);
     }
 }
 
+
+// Prefixed for old webkits
 .background-size(...) {
     -webkit-background-size: @arguments;
             background-size: @arguments;
 }
 
-// You're welcome, Alex and Schalk.
+
+// Spelling aliases for Commonwealth orthographies.
 @colour-text-primary: @color-text-primary;
 @colour-text-secondary: @color-text-secondary;
+@colour-text-tertiary: @color-text-tertiary;
+@colour-link: @color-link;
 @colour-mozred: @color-mozred;
 @colour-mozblue: @color-mozblue;
 @colour-mozgrey: @color-mozgray;
